form.css
/*CSS page for form.html*/
/*formats the username at the top of the page*/
.username {
  font-size: 30px;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: bold;
}

/*formats the div for the logout button and username*/
.center2 {
  display: flex;
  justify-content: left;
}

/*formats everyting belwo the logout button and username*/
body {
  position: relative;
  background-color: #ffffff;
  display: flex;
  font-size: 25px;
  flex-direction: column;
  justify-content: center;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

/*formats the blue box in the center that contains the form*/
.box {
  font-size: larger;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 9%;
  background-color: rgba(117, 211, 243, 0.328);
  box-shadow: 6px 7px 8px rgba(0, 0, 0, 0.172);
  border-radius: 20px;
  padding: 4%;
  width: 30%;
  transition: box-shadow .3s ease;
  align-self: center;
}
.box:hover {
  box-shadow: 12px 14px 16px rgba(0, 0, 0, 0.172);
}

/*formats the size of the logout button image*/
img {
  width: 900%;
  height: auto;
  transition: transform .3s ease;
}
img:hover{
  transform: translateY(-5%);
}

/*styles the name of the user*/
.username {
  margin-top: 1%;
  margin-left: 2%;
  font-size: 22px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: bold;
  display: flex;
  justify-content: center;
}

/*formats the log out button (including the image and the "log out" text*/
.button {
  width: 4%;
  margin-left: 1%;
  margin-right: 12%;
  background-color:white;
  border: none;
  transition: transform .3s ease;
  display:flex;
  flex-direction: column;
  align-items: center;
  font-size: 20px;
  box-shadow: none;
}
/*animates the log out button on hover*/
.button:hover {
  transform: translateY(-5%);
}
/*styles the "submit" button*/
button {
  background-color:white;
  border: none;
  border-radius: 10px;
  transition: transform .3s ease;
  display:flex;
  flex-direction: column;
  align-items: center;
  font-size: 20px;
  box-shadow: 12px 14px 16px rgba(0, 0, 0, 0.172);
}
button:hover {
  transform: translateY(-15%);
}

/*formats the signature field*/
input[type=text]{
  border-radius: 10px;
  height: 10px;
  width: 150px;
  padding: 2%;
  outline: none;
  border-style: solid;
  transition: 0.3s ease;
  box-shadow: 4px 5px 6px rgba(0, 0, 0, 0.172);
  border: none;
  font-size: 15px;
}
input[type=text]:focus {
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.172);
}

/*formats the entire image upload field*/
input[type=file] {
  width: 40%;
}
/*formats the "Choose File" button within the image upload field*/
input[type="file"]::file-selector-button {
    padding: 1%;
    border-radius: 10px;
    background-color: white;
    border-width: 1px;
    transition: transform .3s;
    box-shadow: 4px 5px 6px rgba(0, 0, 0, 0.172);
    border: none;
    font-size: 15px;
}
input[type="file"]::file-selector-button:hover {
    transform: translateY(-7%);
}

/*formats the "Choose Firing Type" field*/
select {
  border-radius: 10px;
  padding: 1%;
  border:none;
  box-shadow: 4px 5px 6px rgba(0, 0, 0, 0.172);
  font-size: 15px;
}

